--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
      We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
-<div id="mc_embed_signup">
+<div id="mc_embed_signup col-md-12">
 <form action="https://adiweb.us17.list-manage.com/subscribe/post?u=88338332b0f08675d42b2ca9f&amp;id=9f9e86dd0d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
   
